flipped image and fixed clippath

--- a/src/styles/pageAbout.module.scss
+++ b/src/styles/pageAbout.module.scss
@@ -14,6 +14,8 @@
         margin-bottom: 1.5625rem;
         border-radius: 0.1875rem;
         filter: drop-shadow(0.1875rem 0.1875rem 0.3125rem darkgrey);
+
+        transform: scaleX(-1);
         
         @media (min-width: 56.25rem) {
             margin: 0 1.5625rem;
@@ -21,7 +23,8 @@
 
         }
         @media (min-width: 1092px) {
-            clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+            //clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+            clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
         }
     }
     
