--- a/src/styles/pageHome.module.scss
+++ b/src/styles/pageHome.module.scss
@@ -85,6 +85,7 @@ div#root {
         opacity: 0.85;
         margin: 0 0 0 auto;
         clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+        filter: grayscale(100%);
         
         @media (min-width: 600px) {
             width: auto;
